<resources>
    <string name="app_name">Navigation View</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="collection">Collection</string>
    <string name="inbox">Inbox</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="john_doe">John Doe</string>
    <string name="verified">Verified</string>

</resources>