<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification"/>
        <item
            android:id="@+id/nav_collection"
            android:title="@string/collection"/>
        <item
            android:id="@+id/nav_inbox"
            android:title="@string/inbox"/>
        <item
            android:id="@+id/nav_orders"
            android:title="@string/orders"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_support"
            android:title="@string/support"/>

        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us"/>
    </group>

</menu>